jEdit 4.4 version history
       (changes since jEdit 4.3)
:encoding=UTF-8:

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry, Shlomy
Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova, Eric Le Lay,
Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey, Dion Whitehead
and Marcelo Vanzin for contributing to this release.

{{{ Bug fixes

- Removed the duplicated "Architecture" line from the Debian control file.
  (bug #2999456 - Björn "Vampire" Kautler)

- In the manage panel, when selecting a library, the description panel do
  not contains "null" for every fields and the title is set to the jar name
  instead of "null" (Matthieu Casanova)

- Update of textarea scrollbars and bufferSwitcher are now done in
  EventQueue thread (Matthieu Casanova #2946031)

- Removed unnecessary popup warnings from InstallPanel when loading a
  pluginset. (Alan Ezust)

- fix #1439605 - remove installer.VariableGridLayout (r16596).

- Fixed bug in "selection-length" status bar widget: The widget was not added
  to the edit bus, so it wasn't updated when the edit pane changed.
  (Shlomy Reinstein)

- Removed write capability to the UrlVFS. Now http:// files are marked
  read-only. (Eric Le Lay # 2805986)

- When having two monitors the About dialog was appearing between them, one half
  on each monitor. Now it's position is relative to the active View
  (Matthieu Casanova)

- Selection foreground color broken when soft wrap. (Shlomy Reinstein #2946203)

- Using regex style encoding auto detectors, StringIndexOutOfBoundsException
  could happen when loading a file. (Kazutoshi Satoda)

- The encoding could be less accurate when opening a file from
  File System Browser. (SF.net bug #1524181,1721796 - Kazutoshi Satoda)

- ALT key typing with Windows Look&Feel (for menu bar interaction) now
  behaves a bit closer to native Windows applications.
  NOTE: It's still incomplete due to some problems in JVM.